fix(css): environment fix jumping :

--- a/src/styles/components/form-elements/styles.less
+++ b/src/styles/components/form-elements/styles.less
@@ -59,9 +59,9 @@
   }
 
   .form-colon {
-    bottom: 0.8rem;
     left: 100%;
     position: absolute;
+    top: 2.2rem;
   }
 
   .form-group-container-action-button-group {
